# wasmedge_rustls_plugin

./: .gitignore  Cargo.toml
.github/workflows/: release.yaml
wasmedge_rustls_api/: Cargo.toml
wasmedge_rustls_api/src/: ffi.rs  stream.rs
wasmedge_rustls_plugin/: Cargo.toml
wasmedge_rustls_plugin/src/: lib.rs
wasmedge_rustls_plugin/src/core/: ast_module.rs  mod.rs  module.rs  types.rs
wasmedge_rustls_plugin/src/core/instance/: function.rs  memory.rs
wasmedge_sys_ffi/: Cargo.toml  gen_binding.sh
