[package]
name = "wasmedge_rustls_plugin"
version = "0.2.0"
edition = "2021"

[lib]
name = "wasmedge_rustls"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
rustls = "0.20"
bytes = "1"
webpki-roots = "0.22"
wasmedge_plugin_sdk = { version = "0.2.0", git = "https://github.com/second-state/wasmedge_plugin_rust_sdk", branch = "bump/0.13" }
log = "0.4"
thiserror = "1"
